# game

./: CMakeLists.txt  CMakePresets.json
src/: main.c
